--- a/website/default.css
+++ b/website/default.css
@@ -5,20 +5,29 @@ body {
 }
 
 h1 {
-  
+
 }
 
 p {color:
 white;
 }
 
+figcaption {
+  font-size: .10em;
+  line-height: 1.5;
+  color: #fff;
+  padding: 1em;
+  background: rgba(19,43,102, .85);
 
+  position: absolute;
+}
 
 .shadowbox {
   border:2px solid #333;
 	box-shadow:8px 8px 5px #444;
 	padding:8px 12px;
 	background-image: linear-gradient(180deg, #fff, #ddd 40%, #ccc);
+}
 
 .body bgcolor{
 	linear-gradient(180deg, 40%);
