--- a/website/default.css
+++ b/website/default.css
@@ -31,11 +31,39 @@
   display: inline-block;}
 }
 
+<style>
+div.content {
+    margin-left: 25%;
+    padding: 1px 16px;
+    height: 1000px;
+}
+
+@media screen and (max-width: 900px) {
+    ul.sidenav {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    ul.sidenav li a {
+        float: left;
+        padding: 15px;
+    }
+    div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) {
+    ul.sidenav li a {
+        text-align: center;
+        float: none;
+    }
+}
+</style>
+
 
 .container {
-  width: 1300px;
+  width: 1100px;
   margin: 0 auto;
-  margin-top:25px;
+  margin-top:50px;
   font-size-adjust: auto;
   background-color: black;
 }
@@ -79,7 +107,13 @@ figcaption {
 }
 
 .Liyah {
-  transform: rotate(180deg);
+  transform: rotate(270deg);
+}
+.John {
+  transform: rotate(90deg);
+}
+.Adira {
+  transform: rotate(90deg);
 }
 
 h6 {color:
@@ -94,8 +128,22 @@ li a:hover {
 
 about {
     position: absolute;
-    right: 0px;
+    right: 50px;
     width: 300px;
     border: 3px solid #73AD21;
     padding: 10px;
+}
+
+.panel-title{
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border: 5px solid lightblue;
+}
+
+h3 {
+  border: 10px;
+  width: 500px;
+  background-color: black
+  color: gold;
 }
