--- a/website/default.css
+++ b/website/default.css
@@ -161,3 +161,15 @@ h3 {
   background-color: black
   color: gold;
 }
+
+footer {
+
+}
+
+form{
+
+}
+
+.item Liyah, John, Adira{
+  caption-side: top;
+}
